nohup.out
  File "manage.py", line 16
    ) from exc
         ^
SyntaxError: invalid syntax
  File "manage.py", line 16
    ) from exc
         ^
SyntaxError: invalid syntax
  File "manage.py", line 16
    ) from exc
         ^
SyntaxError: invalid syntax
Watching for file changes with StatReloader
Watching for file changes with StatReloader
Watching for file changes with StatReloader
Watching for file changes with StatReloader
Performing system checks...

System check identified no issues (0 silenced).
July 14, 2020 - 01:08:03
Django version 3.0.8, using settings 'mysite.settings'
Starting development server at http://127.0.0.1:8080/
Quit the server with CONTROL-C.
Watching for file changes with StatReloader
Watching for file changes with StatReloader
Watching for file changes with StatReloader
Watching for file changes with StatReloader
[14/Jul/2020 01:16:39] "GET / HTTP/1.1" 200 117
[14/Jul/2020 01:16:40] "GET / HTTP/1.1" 200 117
[14/Jul/2020 01:16:43] "GET / HTTP/1.1" 200 117
[14/Jul/2020 01:16:44] "GET / HTTP/1.1" 200 117
[14/Jul/2020 01:16:47] "GET / HTTP/1.1" 200 117
[14/Jul/2020 01:16:50] "GET / HTTP/1.1" 200 117
[14/Jul/2020 01:16:51] "GET / HTTP/1.1" 200 117
[14/Jul/2020 01:18:12] "GET / HTTP/1.1" 200 117
Performing system checks...

System check identified no issues (0 silenced).
July 14, 2020 - 01:16:37
Django version 3.0.8, using settings 'mysite.settings'
Starting development server at http://0.0.0.0:8080/
Quit the server with CONTROL-C.
